# dark-web-crawler

./: .gitignore  README.md  file_index.pkl  output  sample.txt  search_results.txt
crawlers/: requirements.txt
crawlers/crawlers/: items.py  middlewares.py  pipelines.py  settings.py
crawlers/crawlers/spiders/: crawly.py
crawlers/database/: rom whoosh.py
crawlers/lyash/: creating_files.py  filter.py  filter_html.py  ping.py  rom_whoosh.py  seed_list.py  sgui.py  test.py  threads.py  useless_filter.py  visited.txt
crawlers/lyash/filter-results/: 0.vernccvbvyi5qhfzyqengccj7lkove6bjot2xhh5kajhwvidqafczrad.onion\.txt
crawlers/ping2/: Cargo.toml
crawlers/ping2/src/: main.rs
