[package]
name = "ping2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.tokio]
version = "1.28.2"
features = ["full"]

[dependencies.reqwest]
version = "0.11.18"
features = ["socks"]
